src/css/template.css
/* Navbar styles*/

*{
	padding: 0px;
	margin: 0px auto;
}

.navbar{
	height: 140px;
}

.navbar-right{
	padding-top: 95px;
	font-size: 23px;
}

iframe[seamless]{
  border: none;
}

hr { 
    display: block;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    margin-left: auto;
    margin-right: auto;
    border-style: inset;
    border-width: 1px;
}

/* Sticky footer styles*/

#footer {
	background:#F0F0F0;
	text-align: center;
}

html, body {
height: 100%;
}
.wrapper {
min-height: 100%;
height: auto !important;
height: 100%;
margin: 0 auto -4em;
}
.footer, .push {
height: 4em;
}

@media(min-width: 775px){
  .navbar-toggle{
    display: none;
  }
  .navbar-right{
    display: block;
  }
}

@media (min-width: 775px){
  .navbar-right .dropdown-menu{
    right: 0;
    left: auto;
  }
}

/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.carousel {
  height: 350px;
  margin-bottom: 60px;
}
/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  z-index: 10;
}

/* Declare heights because of positioning of img element */
.carousel .item {
  height: 350px;
  background-color: #777;
}
.carousel-inner > .item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: 500px;
}


/* Media Queries for text in navbar*/

}
@media only screen and (max-width: 1000px){
  .navbar-right{font-size: 21px;}
}

@media only screen and (max-width: 900px){
  .navbar-right{font-size: 18px;}
}

@media only screen and (max-width: 800px ){
  .navbar-right{font-size: 16px;}
}



/* 3 Columns*/

.row {
  margin-bottom: 20px;
}
.row .row {
  margin-top: 10px;
  margin-bottom: 0;
}
[class*="col-"] {
  padding-top: 15px;
  padding-bottom: 15px;
  background-color: #F0F0F0;
  background-color: #F0F0F0;
  border: 1px solid #ddd;
}


/* 3 Columns MEDIA QUERIES*/

@media screen and (min-width: 992px ){
  
.row {
    display: table;
}

[class*="col-"] {
    float: none;
    display: table-cell;
    vertical-align: top;
}
}


@media screen and (min-width: 600px ){
.columnbar {
  font-size: 19px;
}
}

@media screen and (min-width: 992px ){
.columnbar {
  font-size: 16px;
}
}

article{
  max-width: 1000px;
}

.sponsors{
  max-width: 1000px;
  min-width: 0px;
  background-color: #F0F0F0;
  border: 1px solid #ddd;
  margin-top: 10px;
  margin-bottom: 20px;
}

.sponsors img{
  margin: 19.5px;
}

